Title Change, header fix, alignment fix

--- a/assets/css/3-sections/_header.sass
+++ b/assets/css/3-sections/_header.sass
@@ -4,6 +4,7 @@
 	background-color: $mainAccent
 	height: 50px
 	width: 100%
+	overflow: hidden
 	ul 
 		list-style-type: none
 		margin: 0
