--- a/assets/css/3-sections/index/_about.sass
+++ b/assets/css/3-sections/index/_about.sass
@@ -9,7 +9,7 @@
 	h1
 		color: #003e85
 		margin: 10px 0
-		font-size: 35px
+		font-size: 27px
 		border-bottom: 0px
 		text-align: left
 	h2
