--- a/assets/css/3-sections/index/_contact.sass
+++ b/assets/css/3-sections/index/_contact.sass
@@ -29,6 +29,7 @@ form
 .submit-wrap
 	border: none
 	text-align: right
+	margin-right: 0px
 	[type="submit"]
 		border: none
 		padding: 10px
